<?xml version="1.0"?>
<package>
  <name>piksi_tutorial</name>
  <version>0.0.4</version>
  <description>Swift Navigation Piksi Driver</description>

  <maintainer email="paul.bouchier@gmail.com">Paul Bouchier</maintainer>

  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/yei_tss_usb</url> -->

  <author email="logans@cottsay.net">Scott K Logan</author>
  <author email="cbjamo@gmail.com">Caleb Jamison</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>piksi_driver</build_depend>
  <build_depend>diagnostic_aggregator</build_depend>
  <run_depend>piksi_driver</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
</package>
